--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="search_hint">Search Film or TV series</string>
+    <string name="search_hint">Search Film or TV series by title or actor</string>
     <string name="app_label">What Watch</string>
 </resources>
