--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search_hint">Search Film or TV series by title or actor</string>
     <string name="app_label">What Watch</string>
+
+    <string name="facebook_app_id">109309489776425</string>
+    <string name="fb_login_protocol_scheme">fb109309489776425</string>
 </resources>
